      included in both \samp{PKG_CPPFLAGS} (or the Fortran or F9x
      equivalents) and \samp{PKG_LIBS}.
    }
  }
}

\section{CHANGES IN R VERSION 2.14.1 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{bitmap()} and \code{dev2bitmap()} look for
      \command{gswin64c.exe} (as used by 64-bit GhostScript), in
      preference to \command{gswin32c.exe}.
    }
  }
}

\section{CHANGES IN R VERSION 2.14.1}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The \code{Save as} menu item on the script
      editor adds extension \file{.R} to a file name without an extension.

      \item In package \pkg{parallel}, \code{detectCores(logical =
	FALSE)} makes an OS-dependent attempt to find the number of
      physical cores.  It usually succeeds, even on XP.
    }
  }
  
  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item The directory pointed to by \env{USER_LOCAL} can now have
      architecture-specific sub-directories \file{lib/i386} and
      \file{lib/x64}.
    }
  }
  
  \subsection{BUG FIXES}{
    \itemize{
      \item The fix for \PR{14543} caused stack problems with outputing
      large \R objects (e.g. data frames of 25,000 items).  (\PR{14698})

      \item In a double-byte locale (Chinese, Japanese, Korean),
      \code{grep()} and friends might have used byte-wise matching of
      strings in the native encoding.  (\PR{14622})
    }
  }
}

\section{CHANGES IN R VERSION 2.14.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The \code{yLineBias} of the \code{windows()} family of
      devices has been changed from 0.1 to 0.2: this changes slightly
      the vertical positioning of text (including axis annotations).
      This can be overridden by setting the new \code{"ylbias"} graphical
      parameter.  This was done for consistency with other devices
      such as \code{pdf()}.

      \item \command{R CMD build} once again attempts to preserve file
      permissions on Windows.
